chore(customer cart_: - Fix bug that makes customer cart UI jumpy - Fix bug that prevents quantity of items displaying correctly {Finishes #161375573]

--- a/UI/css/customercart.css
+++ b/UI/css/customercart.css
@@ -181,10 +181,6 @@ body {
 	text-align: center;
 }
 
-#shopping-cart .heading table th:last-child, #shopping-cart .heading table td:last-child {
-	padding-left: 20%;
-}
-
 #shopping-cart .price-data {
 	font-size: 85%;
 	
